[package]
name = "BlogProject"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
axum = "0.8.8"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
